--- a/app/src/main/res/layout/fragment_softlist.xml
+++ b/app/src/main/res/layout/fragment_softlist.xml
@@ -7,6 +7,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="@string/hello_world" />
+        android:text="SoftList" />
 
 </LinearLayout>
