Complete the Bottom Btn

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="Indigo_colorPrimaryDark">#303f9f</color>
     <color name="Indigo_colorPrimary">#3f51b5</color>
     <color name="Indigo_nav_color">#4675FF</color>
+
+    <color name="bottom_btn_pressed">#fe2557</color>
+    <color name="bottom_btn_normal">#999999</color>
 </resources>
