--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,13 +10,11 @@
         android:layout_weight="2"
         android:orientation="horizontal">
 
-        <ImageView
+        <xvideo.ji.com.jivideo.view.PicSlideView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
-            android:layout_weight="1"
-            android:scaleType="fitXY"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_weight="1" />
 
         <LinearLayout
             android:layout_width="0dp"
