--- a/app/src/main/res/layout/fragment_soft.xml
+++ b/app/src/main/res/layout/fragment_soft.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <ListView
+        android:id="@+id/soft_fragment_lv"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="SoftList" />
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
