increase source for xml

--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:background="@mipmap/ic_launcher" />
+        android:layout_height="wrap_content"
+        android:background="@mipmap/detail_icon" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,10 +17,11 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
-            android:src="@mipmap/ic_launcher" />
+            android:scaleType="fitXY"
+            android:src="@mipmap/detail_icon2" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -44,7 +45,9 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:src="@mipmap/download" />
 
             <TextView
                 android:layout_width="wrap_content"
