--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -5,9 +5,12 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/detail_video_big_pic_iv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@mipmap/detail_icon" />
+        android:background="@mipmap/detail_icon"
+        android:scaleType="center"
+        android:src="@mipmap/play_icon" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,6 +20,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/detail_video_icon_iv"
             android:layout_width="80dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
@@ -31,6 +35,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/detail_video_title_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="funny videos NO.9"
@@ -38,18 +43,21 @@
                 android:textSize="14sp" />
 
             <TextView
+                android:id="@+id/detail_video_content_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="india\nindia\n4833watching" />
 
             <ImageView
+                android:id="@+id/detail_video_download_iv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
+                android:layout_marginTop="4dp"
                 android:src="@mipmap/download" />
 
             <TextView
+                android:id="@+id/detail_video_need_point_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="20Points"
@@ -59,6 +67,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/detail_video_more_detail_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
