--- a/app/src/main/res/layout/custom_drawerlayout.xml
+++ b/app/src/main/res/layout/custom_drawerlayout.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
-            android:background="#f2f2f2"
+            android:background="@color/toolbar_bg"
             android:orientation="horizontal"
             >
 
