--- a/app/src/main/res/layout/activity_point_record.xml
+++ b/app/src/main/res/layout/activity_point_record.xml
@@ -7,10 +7,9 @@
     <!--Toolbar-->
     <include layout="@layout/custom_toolbar" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="point record"
-        />
+    <ListView
+        android:id="@+id/point_record_lv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
