--- a/app/src/main/res/layout/view_customitem.xml
+++ b/app/src/main/res/layout/view_customitem.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_margin="4dp"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="4dp">
 
     <ImageView
         android:id="@+id/item_pic_iv"
@@ -20,4 +20,10 @@
         android:paddingLeft="5dp"
         android:text="hello world"
         android:textColor="#ffffff" />
+
+    <ImageView
+        android:id="@+id/item_dp_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/dp1080p_01" />
 </FrameLayout>
