--- a/app/src/main/res/layout/custom_drawerlayout.xml
+++ b/app/src/main/res/layout/custom_drawerlayout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/custom_drawerlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -121,8 +122,6 @@
                     android:textSize="10sp" />
             </LinearLayout>
         </LinearLayout>
-
-
     </RelativeLayout>
 
     <!--侧滑菜单-->
